--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Worker Attendance App</title>
 
-<!-- PWA -->
-<link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#1976d2">
 
 <style>
@@ -21,7 +19,7 @@ body{
     background:var(--bg);
     padding:20px;
 }
-h2{color:var(--primary);text-align:center}
+h2{text-align:center;color:var(--primary)}
 .container{
     max-width:1100px;
     margin:auto;
@@ -35,14 +33,13 @@ input,button{
     padding:0 16px;
     border-radius:12px;
     border:1px solid #ccc;
-    font-size:14px;
 }
 button{
     background:var(--primary);
-    color:#fff;
+    color:white;
     border:none;
-    cursor:pointer;
     font-weight:600;
+    cursor:pointer;
 }
 button:hover{background:#1259a7}
 .hide{display:none}
@@ -56,13 +53,13 @@ button:hover{background:#1259a7}
 }
 .summary .card{
     background:linear-gradient(135deg,#1976d2,#42a5f5);
-    color:#fff;
+    color:white;
     padding:20px;
     border-radius:16px;
 }
 .summary h3{margin:8px 0 0;font-size:28px}
 
-/* WORKER CARD */
+/* WORKER */
 .worker-card{
     display:flex;
     gap:16px;
@@ -72,7 +69,8 @@ button:hover{background:#1259a7}
     margin-bottom:16px;
 }
 .avatar{
-    width:70px;height:70px;
+    width:70px;
+    height:70px;
     border-radius:50%;
     background:#1976d2;
     color:white;
@@ -96,7 +94,7 @@ tbody tr:nth-child(even){background:#f7f9fc}
 <!-- LOGIN -->
 <div class="container" id="loginBox">
     <h2>Worker Login</h2>
-    <input type="text" id="loginWorkerId" placeholder="Enter Worker ID">
+    <input id="loginWorkerId" placeholder="Enter Worker ID">
     <br><br>
     <button onclick="manualLogin()">Login</button>
 </div>
@@ -146,29 +144,54 @@ tbody tr:nth-child(even){background:#f7f9fc}
 </div>
 
 <script>
+/* ================= CONFIG ================= */
 const workerCSV="https://docs.google.com/spreadsheets/d/e/2PACX-1vScKUqfoXQNBZy7kPYd6bYpHV8_KsOMTDAA-Rx9PI03rZRUkoRHIz25htZDEuyhf8SerewYetdOgJai/pub?gid=544154648&single=true&output=csv";
 const attendanceCSV="https://docs.google.com/spreadsheets/d/e/2PACX-1vQeMfVC0OT9CSn4ShLoMNqfZ3pFD5RlkS2dCj1jdfjzvvvGYWOSUy5Mr-zdQ97lb96sjnoXZh5zFaCP/pub?gid=1560298674&single=true&output=csv";
 
+/* ================= DATA ================= */
 let workers={},attendance=[],loggedId="";
 
+/* ================= HELPERS ================= */
 function csv(t){return t.split("\n").map(r=>r.split(","))}
 function fDate(d){
     let p=d.split("/");
     return p.length===3?`${p[2]}-${p[1].padStart(2,"0")}-${p[0].padStart(2,"0")}`:d;
 }
 
+/* ================= LOAD DATA ================= */
 Promise.all([
     fetch(workerCSV).then(r=>r.text()),
     fetch(attendanceCSV).then(r=>r.text())
 ]).then(([w,a])=>{
     csv(w).slice(1).forEach(r=>{
-        if(r[1])workers[r[1]]={name:r[2],des:r[3],rate:r[5]};
+        if(r[1]) workers[r[1]]={name:r[2],des:r[3],rate:r[5]};
     });
+
     csv(a).slice(1).forEach(r=>{
-        if(r[1])attendance.push({id:r[1],date:fDate(r[5]),att:+r[6]||0,ot:+r[7]||0});
+        if(r[1]) attendance.push({
+            id:r[1],
+            date:fDate(r[5]),
+            att:+r[6]||0,
+            ot:+r[7]||0
+        });
     });
-    autoLoginFromURL();
+
+    // ✅ DATA READY → AUTO LOGIN
+    autoLoginFromQuery();
 });
+
+/* ================= LOGIN ================= */
+function manualLogin(){
+    let id=loginWorkerId.value.trim();
+    if(!workers[id]) return alert("Invalid Worker ID");
+    showDashboard(id);
+}
+
+function autoLoginFromQuery(){
+    let params=new URLSearchParams(location.search);
+    let id=params.get("id");
+    if(id && workers[id]) showDashboard(id);
+}
 
 function showDashboard(id){
     loggedId=id;
@@ -184,18 +207,11 @@ function showDashboard(id){
     filterData();
 }
 
-function manualLogin(){
-    let id=loginWorkerId.value.trim();
-    if(!workers[id]) return alert("Invalid Worker ID");
-    showDashboard(id);
+function logout(){
+    location.href="./";
 }
 
-function autoLoginFromURL(){
-    let parts=location.pathname.split("/").filter(Boolean);
-    let id=parts.length>1?parts[parts.length-1]:"";
-    if(id && workers[id]) showDashboard(id);
-}
-
+/* ================= FILTER ================= */
 function filterData(){
     let s=startDate.value,e=endDate.value;
     output.innerHTML="";
@@ -207,19 +223,15 @@ function filterData(){
         if(e && r.date>e) return;
 
         ta+=r.att; to+=r.ot;
-        output.innerHTML+=`<tr><td>${r.date}</td><td>${r.att}</td><td>${r.ot}</td></tr>`;
+        output.innerHTML+=`<tr>
+            <td>${r.date}</td>
+            <td>${r.att}</td>
+            <td>${r.ot}</td>
+        </tr>`;
     });
 
     sumAtt.innerText=ta;
     sumOT.innerText=to;
-}
-
-function logout(){location.href="./";}
-</script>
-
-<script>
-if("serviceWorker" in navigator){
-    navigator.serviceWorker.register("sw.js");
 }
 </script>
 
